Update Maven Wrapper scripts and added maven-wrapper-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <gatling-maven-plugin.version>4.3.4</gatling-maven-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+        <maven-wrapper-plugin.version>3.2.0</maven-wrapper-plugin.version>
     </properties>
 
     <dependencies>
@@ -64,6 +65,11 @@
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven-jar-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-wrapper-plugin</artifactId>
+                <version>${maven-wrapper-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>io.gatling</groupId>
