--- a/.github/workflows/gatling_test_all_mine.yml
+++ b/.github/workflows/gatling_test_all_mine.yml
@@ -26,4 +26,7 @@ jobs:
       run: mvn clean gatling:test -Dgatling.runMultipleSimulations -Dgatling.includes=pl.gemiusz.* -Dgatling.excludes=pl.gemiusz.Case0019WhenStatusCode400ThenFailSimulation
     - name: Maven Dependency Tree Dependency Submission
       uses: advanced-security/maven-dependency-submission-action@v3.0.2
+      with:
+        ignore-maven-wrapper: true
+    
 
