--- a/.github/workflows/gatling_test_all_mine_after_pull_request.yml
+++ b/.github/workflows/gatling_test_all_mine_after_pull_request.yml
@@ -8,7 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: CheckOut
+      uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
